Java 23
add: nuevo DTO con recorde
update: SporityTrackDTO a utlizar el nuevo DTO
update: SpotifySongProcessor utilizacion toList
add: infomración en Readme.md